#35 upload assets using a for_each

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
     <title>Hello Terraformers</title>
 </head>
 <body>
-    <h1>Hello there Terraformers!</h1>
+    <h1>Random photos to upload</h1>
+    <img src="/assets/planetscale-dark.png" />
+    <img src="/assets/prismaHD.png" />
 </body>
-</html>
+<html>
