--- a/public/payday/index.html
+++ b/public/payday/index.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello Terraformers</title>
+    <title>Payday</title>
 </head>
 <body>
-    <h1>Random photos to upload</h1>
-    <img src="/assets/planetscale-dark.png" />
-    <img src="/assets/prismaHD.png" />
+    <h1>Making my own payday bars</h1>
+    <img src="/assets/payday.jpg" width="300px" />
 </body>
 <html>
